Removed facebook + small changes in templates

--- a/templates/auth/user_login.html
+++ b/templates/auth/user_login.html
@@ -93,22 +93,14 @@
 
 
             <div class="col right_block pt-1">
-                <div class="header_div pb-4">
+                <div class="header_div pb-5">
                     <span class="header_title">Sign in via socials</span>
                 </div>
-                <div class="row pb-5">
+                <div class="row pt-4 pb-5">
                     <div class="col">
                         <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-md btn-block omb_btn-google">
                             <i class="fa fa-google visible-xs text-white"></i>
                             <span class="hidden-xs text-white">Sign in with Google</span>
-                        </a>
-                    </div>
-                </div>
-                <div class="row pb-5">
-                    <div class="col">
-                        <a href="{% url 'social:begin' 'facebook' %}" class="btn btn-md btn-block omb_btn-facebook">
-                            <i class="fa fa-facebook visible-xs text-white"></i>
-                            <span class="hidden-xs text-white">Sign in with Facebook</span>
                         </a>
                     </div>
                 </div>
