--- a/templates/order/order_list.html
+++ b/templates/order/order_list.html
@@ -9,7 +9,7 @@
                 <th scope="col">Created at:</th>
                 <th scope="col">End at:</th>
                 <th scope="col">Plated end at:</th>
-                <th scope="col"><a type="button" class="btn btn-success mx-2 col-md-7" href="create/">Create</a>
+                <th scope="col"><a type="button" class="btn btn-success mx-2 col-md-7" href="{% url 'order_create' %}">Create</a>
                 </th>
             </tr>
             </thead>
