--- a/templates/order/order_user_list.html
+++ b/templates/order/order_user_list.html
@@ -9,7 +9,7 @@
                 <th scope="col">Created at:</th>
                 <th scope="col">End at:</th>
                 <th scope="col">Plated end at:</th>
-                <th scope="col"><a type="button" class="btn btn-success" href="create/">Create</a>
+                <th scope="col"><a type="button" class="btn btn-success" href="{% url 'order_create' %}">Create</a>
                 </th>
             </tr>
             </thead>
