--- a/templates/author/author_create.html
+++ b/templates/author/author_create.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 
 
@@ -11,6 +12,6 @@
             </div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
-        <a href="/authors/" class="btn btn-success">Back to list</a>
+        <a href="{% url 'author_list' %}" class="btn btn-success">Back to list</a>
     </form>
 {% endblock %}
