--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid mx-3">
-        <a class="navbar-brand" href="/">Django Library</a>
+        <a class="navbar-brand" href="{% url 'index' %}">Django Library</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
             <span class="navbar-toggler-icon"></span>
@@ -67,12 +67,12 @@
                         Authors
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/authors/">List of authors</a></li>
+                        <li><a class="dropdown-item" href="{% url 'author_list' %}">List of authors</a></li>
                         {% if perms.author.add_author %}
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="/authors/create/">Add new author</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="{% url 'author_create' %}">Add new author</a></li>
                         {% endif %}
                     </ul>
                 </li>
@@ -82,12 +82,12 @@
                         Books
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/books/">List of books</a></li>
+                        <li><a class="dropdown-item" href="{% url 'book_list' %}">List of books</a></li>
                         {% if perms.book.add_book %}
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="/books/create/">Add new book</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="{% url 'book_create' %}">Add new book</a></li>
                         {% endif %}
                     </ul>
                 </li>
@@ -98,17 +98,17 @@
                     </a>
                     <ul class="dropdown-menu">
                         {% if request.user|has_group:"Librarian" or user.is_superuser %}
-                            <li><a class="dropdown-item" href="/orders/">List of orders</a></li>
+                            <li><a class="dropdown-item" href="{% url 'order_list' %}">List of orders</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
                         {% else %}
-                            <li><a class="dropdown-item" href="/orders/">My orders</a></li>
+                            <li><a class="dropdown-item" href="{% url 'order_list' %}">My orders</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
                         {% endif %}
-                        <li><a class="dropdown-item" href="/orders/create/">New order</a></li>
+                        <li><a class="dropdown-item" href="{% url 'order_create' %}">New order</a></li>
                     </ul>
                 </li>
             </ul>
@@ -117,7 +117,7 @@
                 <ul class="nav justify-content-end">
                     <li class="nav-item mx-2">
                         <div>
-                            <button class="btn btn-outline-light" onclick="location.href='/user/login/'"
+                            <button class="btn btn-outline-light" onclick="location.href='{% url 'login' %}'"
                                     aria-expanded="false">
                                 Sign in
                             </button>
@@ -125,7 +125,7 @@
                     </li>
                     <li class="nav-item mx-3">
                         <div>
-                            <button class="btn btn-outline-light" onclick="location.href='/user/register/'"
+                            <button class="btn btn-outline-light" onclick="location.href='{% url 'register' %}'"
                                     aria-expanded="false">
                                 Sign up
                             </button>
@@ -134,7 +134,8 @@
                 </ul>
 
             {% else %}
-                <button class="btn btn-outline-light" onclick="location.href='/user/logout/'" aria-expanded="false">
+                <button class="btn btn-outline-light" onclick="location.href='{% url 'logout' %}'"
+                        aria-expanded="false">
                     Logout
                 </button>
             {% endif %}
@@ -143,7 +144,7 @@
     </div>
 </nav>
 <div class="content container my-2">
-{% include 'includes/messages.html' %}
+    {% include 'includes/messages.html' %}
     {% block content %}
         {% if user.is_authenticated %}
             <h3>Hello, {{ user.first_name }} {{ user.last_name }}!</h3>
