--- a/templates/book/book_create.html
+++ b/templates/book/book_create.html
@@ -3,7 +3,14 @@
 
 
 {% block content %}
-    <form action="" method="post" autocomplete="off">
+    <style>
+        .parent {
+            height: 100%;
+            padding: 10%;
+            text-align: center;
+        }
+    </style>
+    <form method="post" autocomplete="off">
         {% csrf_token %}
         <div class="w-50 p-3">
             <div class="form-floating mb-3">
@@ -11,6 +18,6 @@
             </div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
-        <a href="/books/" class="btn btn-success">Back to list</a>
+        <a href="{% url 'book_list' %}" class="btn btn-success">Back to list</a>
     </form>
 {% endblock %}
