--- a/templates/book/book_list.html
+++ b/templates/book/book_list.html
@@ -22,9 +22,9 @@
                     <td>{{ book.description|truncatewords:40 }}</td>
                     <td>{{ book.count }}</td>
                     <td>
-                        <a type="button" class="btn btn-primary mx-2 my-2" href="/books/{{ book.id }}">View</a>
+                        <a type="button" class="btn btn-primary mx-2 my-2" href="{% url 'book_list' book.id %}">View</a>
                         {% if perms.book.change_book %}
-                            <a type="button" class="btn btn-warning" href="/books/update/{{ book.id }}">Update</a>
+                            <a type="button" class="btn btn-warning" href="{% url 'book_update' book.id %}">Update</a>
                         {% endif %}
                     </td>
                 </tr>
