--- a/templates/order/no_orders.html
+++ b/templates/order/no_orders.html
@@ -3,16 +3,15 @@
 {% block content %}
     <style>
         .parent {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            position: relative;
-            bottom: 0;
+            height: 100%;
+            padding: 10%;
+            text-align: center;
         }
     </style>
     <div class="parent">
-        <h3 class="my-5">You don't have any orders yet...</h3>
-        <h4><a href="{% url "order_create" %}">Order now!</a></h4>
+        <div>
+            <h3 class="my-5">You don't have any orders yet...</h3>
+            <h4><a class="btn btn-primary btn-lg" href="{% url "order_create" %}">Order now!</a></h4>
+        </div>
     </div>
 {% endblock %}
