--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% load custom_tags %}
 <!DOCTYPE html>
 <html lang="en">
@@ -9,48 +10,16 @@
               crossorigin="anonymous">
         <link rel="icon" href="https://img.icons8.com/bubbles/50/null/literature.png"
               type="image/x-icon">
+
+        <link rel="stylesheet" href="{% static 'css/index/index.css' %}">
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/1edd52e45b.js" crossorigin="anonymous"></script>
-        <style>
-            * {
-                margin: 0;
-            }
-
-            html, body {
-                height: 100%;
-            }
-
-            body {
-                background: #ffffff;
-                color: #222222;
-                font-family: Arial, Helvetica, sans-serif;
-            }
-
-            .content {
-                box-sizing: border-box;
-                padding: 20px;
-                width: 100%;
-            }
-
-            .content p {
-                margin: 10px 0;
-                font-size: 16px;
-                line-height: 1.8;
-            }
-
-            body {
-                display: flex;
-                flex-direction: column;
-            }
-
-            .content {
-                flex-grow: 1;
-            }
-        </style>
     {% endblock %}
 </head>
+
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid mx-3">
