--- a/templates/book/book_create.html
+++ b/templates/book/book_create.html
@@ -1,15 +1,10 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
-
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/book/create.css' %}">
 
 {% block content %}
-    <style>
-        .parent {
-            height: 100%;
-            padding: 10%;
-            text-align: center;
-        }
-    </style>
     <form method="post" autocomplete="off">
         {% csrf_token %}
         <div class="w-50 p-3">
