--- a/templates/auth/user_login.html
+++ b/templates/auth/user_login.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <link rel="stylesheet" href="{% static 'css/authentication/auth.css' %}">
-    <div class="container p-3 main_block">
+    <div class="container py-3 main_block">
 
         <div class="row">
             <div class="col">
