--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
         <link rel="icon" href="https://img.icons8.com/bubbles/50/null/literature.png"
               type="image/x-icon">
 
-        <link rel="stylesheet" href="{% static 'css/index/index.css' %}">
+        <link rel="stylesheet" href="{% static 'css/index/index.css' %}?{% now "U" %}">
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -22,7 +22,7 @@
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid mx-3">
+    <div class="container-fluid mx-4 my-1">
         <a class="navbar-brand" href="{% url 'index' %}">Django Library</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
@@ -131,7 +131,7 @@
                 <!-- Gmail -->
                 <a
                         class="btn btn-secondary btn-floating mx-3 my-2"
-                        style="background-color: #dd4b39;"
+                        style="background-color: #ec5947;"
                         href="mailto:asineckijegor@gmail.com"
                         role="button">
                     <i class="fa-solid fa-inbox"></i>
@@ -140,7 +140,7 @@
                 <!-- Telegram -->
                 <a
                         class="btn btn-secondary btn-floating mx-3 my-2"
-                        style="background-color: #38a6db;"
+                        style="background-color: #509ec4;"
                         href="https://t.me/import_error"
                         role="button"
                         target="_blank">
@@ -150,7 +150,7 @@
                 <!-- Linkedin -->
                 <a
                         class="btn btn-secondary btn-floating mx-3 my-2"
-                        style="background-color: #0E67A8;"
+                        style="background-color: #2381c9;"
                         href="https://www.linkedin.com/in/yasegor/"
                         role="button"
                         target="_blank"
@@ -159,7 +159,7 @@
                 <!-- Github -->
                 <a
                         class="btn btn-secondary btn-floating mx-3 my-2"
-                        style="background-color: #333333;"
+                        style="background-color: #4d4d4d;"
                         href="https://github.com/yasegor"
                         role="button"
                         target="_blank"
