--- a/templates/order/order_user_list.html
+++ b/templates/order/order_user_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-    <link rel="stylesheet" href="{% static "css/order/order_user_list.css" %}?{% now "U" %}">
+    <link rel="stylesheet" href="{% static "css/order/order_user_list.css" %}">
 
     <div class="content container pt-3 my-2 h-100 w-100 d-flex flex-column flex-grow-1">
         <div class="row d-flex justify-content-center">
