--- a/static/css/index/index.css
+++ b/static/css/index/index.css
@@ -34,3 +34,45 @@ body {
 .content {
     flex-grow: 1;
 }
+
+.btn-success {
+    color: #444444;
+    background: #77DD77;
+    border: 1px solid #4d4d4d;
+}
+
+.btn-success:hover {
+    background: #51c451;
+    border: 1px solid #333333;
+}
+
+.btn-primary {
+    color: #444444;
+    background: #a4bdf5;
+    border: 1px solid #4d4d4d;
+}
+
+.btn-primary:hover {
+    background: #769ae8;
+    border: 1px solid #333333;
+}
+
+.btn-danger {
+    color: #444444;
+    background: #ff6961;
+    border: 1px solid #4d4d4d;
+}
+
+.btn-danger:hover {
+    background: #ff4d44;
+    border: 1px solid #333333;
+}
+
+.asteriskField {
+    display: none;
+}
+
+.form-control {
+    font-size: .9rem;
+}
+
