--- a/templates/author/author_create.html
+++ b/templates/author/author_create.html
@@ -4,14 +4,24 @@
 
 
 {% block content %}
-    <form action="" method="post" autocomplete="off">
-        {% csrf_token %}
-        <div class="w-50 p-3">
-            <div class="form-floating mb-3">
-                {{ form|crispy }}
-            </div>
+
+    <div class="content container pt-5 my-4 d-flex justify-content-center">
+
+        <div class="col-3 text-center">
+            <form method="post" autocomplete="off">
+                {% csrf_token %}
+                <div class="mb-4">
+                    {{ form.name|as_crispy_field }}
+                    {{ form.patronymic|as_crispy_field }}
+                    {{ form.surname|as_crispy_field }}
+                </div>
+                <a href="javascript:history.go(-1)" class="btn btn-success col-5 mx-2"><i
+                        class="fa-regular fa-circle-left"></i> Go back</a>
+                <button type="submit" class="btn btn-primary col-5 mx-2"><i class="fa-regular fa-circle-check"></i>
+                    Submit
+                </button>
+            </form>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-        <a href="{% url 'author_list' %}" class="btn btn-success">Back to list</a>
-    </form>
+
+    </div>
 {% endblock %}
