--- a/templates/author/author_detail.html
+++ b/templates/author/author_detail.html
@@ -1,48 +1,70 @@
 {% extends 'base.html' %}
 {% load static %}
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="{% static 'css/author/modal.css' %}">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 {% block content %}
+    <link rel="stylesheet" href="{% static 'css/author/author_detail.css' %}?{% now "U" %}">
+    <link rel="stylesheet" href="{% static 'css/modal.css' %}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-    <div class="my-5">
-        <h4>{{ author.name }} {{ author.patronymic }} {{ author.surname }}</h4>
-        <h4>Books: {{ books|join:'; ' }}</h4>
-    </div>
+    <div class="content container pt-3 my-2 h-100 w-100 d-flex flex-column flex-grow-1">
 
-    {% if perms.author.change_author %}
-        <a href="{% url 'author_update' author.id %}" class="btn btn-primary">Update</a>
-    {% endif %}
-    <a href="{% url 'author_list' %}" class="btn btn-success">Back to list</a>
-    <!-- Button HTML (to Trigger Modal) -->
-    {% if perms.author.delete_author %}
-        <a href="#myModal" class="btn btn-danger" data-toggle="modal">Delete</a>
-    {% endif %}
-
-    <!-- Modal HTML -->
-    <div id="myModal" class="modal fade">
-        <div class="modal-dialog modal-confirm">
-            <div class="modal-content">
-                <div class="modal-header flex-column">
-                    <div class="icon-box">
-                        <i class="material-icons">&#xE5CD;</i>
+        <div class="mt-3 d-flex flex-column align-items-center">
+            <h4 class="mb-3"><b>{{ author.name }} {{ author.patronymic }} {{ author.surname }}</b> is the author of
+                books such as...</h4>
+            <hr class="hr">
+            <div class="row d-flex justify-content-center">
+                {% for book in books %}
+                    <div class="col col-sm-3 m-3 pt-3">
+                        <div class="h-100">
+                            <div class="d-flex align-items-center justify-content-center">
+                                <a href="{% url 'book_detail' book.id %}" class="book-list">{{ book.name }}</a>
+                            </div>
+                        </div>
                     </div>
-                    <h4 class="modal-title w-100">Are you sure?</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <p>Do you really want to delete these records? This process cannot be undone.</p>
-                </div>
-                <div class="modal-footer justify-content-center">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-danger"><a
-                            href="{% url 'author_delete' author.id %}">Delete</a>
-                    </button>
-                </div>
+                {% endfor %}
             </div>
         </div>
+
+
+        <nav class="d-flex justify-content-center buttons-block">
+            <a href="javascript:history.go(-1)" class="btn btn-success mx-3 col-lg-2"><i
+                    class="fa-regular fa-circle-left"></i> Go back</a>
+            {% if perms.author.change_author %}
+                <a href="{% url 'author_update' author.id %}" class="btn btn-primary mx-3 col-lg-2"><i
+                        class="fa-solid fa-pen-to-square"></i> Update</a>
+            {% endif %}
+            {% if perms.author.delete_author %}
+                <a href="#myModal" class="btn btn-danger mx-3 col-lg-2" data-toggle="modal"><i
+                        class="fa-solid fa-trash-can"></i> Delete</a>
+            {% endif %}
+
+            <!-- Modal HTML -->
+            <div id="myModal" class="modal fade">
+                <div class="modal-dialog modal-confirm">
+                    <div class="modal-content">
+                        <div class="modal-header flex-column">
+                            <div class="icon-box">
+                                <i class="material-icons">&#xE5CD;</i>
+                            </div>
+                            <h4 class="modal-title w-100">Are you sure?</h4>
+                        </div>
+                        <div class="modal-body">
+                            <p>Do you really want to delete these records? This process cannot be undone.</p>
+                        </div>
+                        <div class="modal-footer justify-content-center">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-danger"><a
+                                    href="{% url 'author_delete' author.id %}"
+                                    style="text-decoration: none; color: white">Delete</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
     </div>
+
 {% endblock %}
