--- a/templates/book/book_detail.html
+++ b/templates/book/book_detail.html
@@ -1,27 +1,51 @@
 {% extends 'base.html' %}
 {% load static %}
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 {% block content %}
+    <link rel="stylesheet" href="{% static 'css/modal.css' %}">
+    <link rel="stylesheet" href="{% static 'css/book/book_detail.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="{% static 'css/book/detail.css' %}">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <div class="my-4">
-        <h5><i>Book Title:</i> {{ book.name }}</h5>
-        <h5><i>Author:</i> {{ book.get_authors_list|join:'; ' }}</h5>
-        <h5><i>Book Count:</i> {{ book.count }}</h5>
-        <h5><i>Book Description:</i> <br>{{ book.description }}</h5>
+    <style>
+        hr {
+            border: 0;
+            clear: both;
+            display: block;
+            width: 96%;
+            background-color: #5b5b5b;
+            height: 1px;
+        }
+    </style>
+    <div class="content container pt-3 my-2 d-flex flex-column flex-grow-1 h-75 mb-5">
+
+        <div class="row d-flex justify-content-center">
+            <div class="col-9 d-flex mt-3">
+                <div class="card">
+                    <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                        <h4 class="card-title my-3"><b>&laquo; {{ book.name }} &raquo;</b></h4>
+                        <h5 class="card-title"><b>{{ book.get_authors_list|join:", " }}</b></h5>
+                        <hr>
+                        <p class="card-text">{{ book.description }}</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </div>
-    <div>
-        {% if perms.book.change_book %}
-            <a href="{% url 'book_update' book.id %}" class="btn btn-primary">Update</a>
+
+
+    <nav class="d-flex justify-content-center mt-auto">
+        <a href="javascript:history.go(-1)" class="btn btn-success mx-3 col-lg-2"><i
+                class="fa-regular fa-circle-left"></i> Go back</a>
+        {% if perms.author.change_author %}
+            <a href="{% url 'book_update' book.id %}" class="btn btn-primary mx-3 col-lg-2"><i
+                    class="fa-solid fa-pen-to-square"></i> Update</a>
         {% endif %}
-        <a href="{% url 'book_list' %}" class="btn btn-success">Back to list</a>
-        <!-- Button HTML (to Trigger Modal) -->
-        {% if perms.book.delete_book %}
-            <a href="#myModal" class="btn btn-danger" data-toggle="modal">Delete</a>
+        {% if perms.author.delete_author %}
+            <a href="#myModal" class="btn btn-danger mx-3 col-lg-2" data-toggle="modal"><i
+                    class="fa-solid fa-trash-can"></i> Delete</a>
         {% endif %}
 
         <!-- Modal HTML -->
@@ -33,7 +57,6 @@
                             <i class="material-icons">&#xE5CD;</i>
                         </div>
                         <h4 class="modal-title w-100">Are you sure?</h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
                         <p>Do you really want to delete these records? This process cannot be undone.</p>
@@ -41,11 +64,13 @@
                     <div class="modal-footer justify-content-center">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                         <button type="button" class="btn btn-danger"><a
-                                href="{% url 'book_delete' book.id %}">Delete</a>
+                                href="{% url 'book_delete' book.id %}" style="text-decoration: none; color: white">Delete</a>
                         </button>
                     </div>
                 </div>
             </div>
         </div>
+    </nav>
     </div>
+
 {% endblock %}
