--- a/templates/order/order_create.html
+++ b/templates/order/order_create.html
@@ -2,8 +2,33 @@
 {% load crispy_forms_tags %}
 {% load crispy_forms_filters %}
 {% block content %}
-    <form method="POST">
-        {% csrf_token %}
-        {% crispy form %}
-    </form>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
+    <link href="path/to/select2.min.css" rel="stylesheet"/>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"
+            integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <div class="content container pt-5 my-4 d-flex justify-content-center">
+        <div class="col-3 text-center">
+            {{ form.media }}
+            <form method="post" autocomplete="off">
+                {% csrf_token %}
+                <div class="mb-4">
+                    {{ form|crispy }}
+                </div>
+                <a href="javascript:history.go(-1)" class="btn btn-success col-5 mx-2"><i
+                        class="fa-regular fa-circle-left"></i> Go back</a>
+                <button type="submit" class="btn btn-primary col-5 mx-2"><i class="fa-regular fa-circle-check"></i>
+                    Submit
+                </button>
+            </form>
+        </div>
+    </div>
+
+
+    <script src="path/to/select2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#id_book').select2();
+        });
+    </script>
 {% endblock %}
