--- a/templates/order/order_list.html
+++ b/templates/order/order_list.html
@@ -3,6 +3,7 @@
 
 {% block content %}
     <link rel="stylesheet" href="{% static "css/order/order_list.css" %}?{% now "U" %}">
+    <link rel="stylesheet" href="{% static "css/modal.css" %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
