--- a/templates/base.html
+++ b/templates/base.html
@@ -98,10 +98,24 @@
                 </ul>
 
             {% else %}
-                <button class="btn btn-outline-light" onclick="location.href='{% url 'logout' %}'"
-                        aria-expanded="false">
-                    Logout
-                </button>
+                <ul class="nav justify-content-end">
+                    <li class="nav-item mx-2">
+                        <div>
+                            <button class="btn btn-outline-light" onclick="location.href='{% url 'profile' %}'"
+                                    aria-expanded="false">
+                                Profile
+                            </button>
+                        </div>
+                    </li>
+                    <li class="nav-item mx-3">
+                        <div>
+                            <button class="btn btn-outline-light" onclick="location.href='{% url 'logout' %}'"
+                                    aria-expanded="false">
+                                Logout
+                            </button>
+                        </div>
+                    </li>
+                </ul>
             {% endif %}
 
         </div>
