--- a/templates/auth/profile.html
+++ b/templates/auth/profile.html
@@ -11,16 +11,22 @@
                     <div class="card mb-4 h-100">
                         <div class="card-body text-center pb-0">
                             <div class="mt-1 mb-4">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp"
-                                     alt="avatar"
-                                     class="rounded-circle img-fluid" style="width: 150px;">
+                                <img src="{{ user.profile.avatar.url }}"
+                                     class="rounded-circle img-fluid crop" id="myImg">
+                            </div>
+                            <div id="myModal" class="modal">
+                                <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
+                                <img class="modal-content" id="img01">
+                                <div id="caption"></div>
                             </div>
                             <div class="mb-4">
                                 <h5 class="my-3"><strong>{{ user.username }}</strong></h5>
                                 <p class="text-muted">Reader №{{ user.id }}</p>
                             </div>
                             <div>
-                                <button type="button" class="btn button_detail">Update</button>
+                                <button type="button" onclick="location.href='{% url 'profile_update' user.id %}'"
+                                        class="btn button_detail">Update
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -79,6 +85,6 @@
             </div>
         </div>
     </section>
-
+    <script src="{% static 'js/modal.js' %}"></script>
 
 {% endblock %}
