--- a/static/css/authentication/profile.css
+++ b/static/css/authentication/profile.css
@@ -41,7 +41,7 @@ img {
     opacity: 0.7;
 }
 
-.modal {
+.modal-photo {
     display: none;
     position: fixed;
     z-index: 1;
@@ -55,11 +55,11 @@ img {
     background-color: rgba(0, 0, 0, 0.9);
 }
 
-.modal-content {
+.modal-content-photo {
     margin: auto;
     display: block;
     width: 80%;
-    max-width: 700px;
+    max-width: 500px;
 }
 
 #caption {
@@ -73,7 +73,7 @@ img {
     height: 150px;
 }
 
-.modal-content, #caption {
+.modal-content-photo, #caption {
     -webkit-animation-name: zoom;
     -webkit-animation-duration: 0.6s;
     animation-name: zoom;
@@ -116,7 +116,34 @@ img {
 }
 
 @media only screen and (max-width: 700px) {
-    .modal-content {
+    .modal-content-photo {
         width: 100%;
+    }
+}
+
+.circles {
+    position: absolute;
+    top: 20px;
+    left: 25px;
+    height: 30px;
+    width: 30px;
+    background: url("circle.svg");
+    background-size: cover;
+}
+
+
+.circles:hover {
+    animation-name: crcA1;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes crcA1 {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
     }
 }
