--- a/templates/auth/profile.html
+++ b/templates/auth/profile.html
@@ -58,7 +58,7 @@
                                         {% else %}
                                             <div class="modal-body">
                                                 <p><b>Your token:</b>
-                                                    <code id="token" style="cursor: pointer;">{{ token }}</code>
+                                                    <code style="cursor: pointer;">{{ token }}</code>
                                                 </p>
                                                 <p id="success"></p>
 
