--- a/templates/base.html
+++ b/templates/base.html
@@ -140,7 +140,7 @@
 
                 <!-- Gmail -->
                 <a
-                        class="btn btn-secondary btn-floating mx-3 my-2"
+                        class="btn btn-secondary btn-floating mx-3 my-1"
                         style="background-color: #ec5947;"
                         href="mailto:asineckijegor@gmail.com"
                         role="button">
@@ -149,7 +149,7 @@
 
                 <!-- Telegram -->
                 <a
-                        class="btn btn-secondary btn-floating mx-3 my-2"
+                        class="btn btn-secondary btn-floating mx-3"
                         style="background-color: #509ec4;"
                         href="https://t.me/import_error"
                         role="button"
@@ -159,7 +159,7 @@
 
                 <!-- Linkedin -->
                 <a
-                        class="btn btn-secondary btn-floating mx-3 my-2"
+                        class="btn btn-secondary btn-floating mx-3"
                         style="background-color: #2381c9;"
                         href="https://www.linkedin.com/in/yasegor/"
                         role="button"
@@ -168,7 +168,7 @@
                 ></a>
                 <!-- Github -->
                 <a
-                        class="btn btn-secondary btn-floating mx-3 my-2"
+                        class="btn btn-secondary btn-floating mx-3"
                         style="background-color: #4d4d4d;"
                         href="https://github.com/yasegor"
                         role="button"
